Updates to the classpath for the latest sdk. Fixes for the deployment. Removed extra spacing at the top of the payment iframe.

--- a/1ffc - common/linked-root/css/paymentCustom.css
+++ b/1ffc - common/linked-root/css/paymentCustom.css
@@ -12,6 +12,10 @@
     border: 2px solid #25408f;
 }
 
+main {
+	margin-top: 0px;
+}
+
 /**************************************************************************************************
  * CSS for PAYA hosted pages.
  *************************************************************************************************/
